packages/libs/error-stack/tests/snapshots/test_debug__full__alt.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
root error
<<<<<<< HEAD
├╴ tests/common.rs:157:5
=======
├╴ tests/common.rs:4:5
>>>>>>> origin/main
├╴ backtrace (1)
├╴ span trace with 2 frames (1)
╰╴ Empty

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]

Snippet
