packages/libs/error-stack/tests/snapshots/test_debug__full__color_mode_color.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
[1mroot error[22m
[31m├╴[39mat [90mtests/common.rs:4:5[39m
[31m├╴[39mbacktrace (1)
[31m╰╴[39mspan trace with 2 frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
