packages/libs/error-stack/tests/snapshots/test_debug__full__color_mode_emphasis.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
[1mroot error[0m
[1m├[0m[1m╴[0m[1m [0m[3mtests/common.rs:4:5[0m
[1m├[0m[1m╴[0m[1m [0mbacktrace (1)
[1m╰[0m[1m╴[0m[1m [0mspan trace with 2 frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
