packages/libs/error-stack/tests/snapshots/test_debug__full__hook_context.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
root error
├╴ tests/common/mod.rs:4:5
├╴ backtrace (1)
├╴ span trace with 2 frames (1)
╰╴ unsigned 32bit integer (No. 0)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
