packages/libs/error-stack/tests/snapshots/test_debug__full__hook_decr.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
root error
├╴ tests/common.rs:157:5
├╴ backtrace (1)
├╴ span trace with 2 frames (1)
├╴ -1
├╴ -2
╰╴ -3

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
