packages/libs/error-stack/tests/snapshots/test_debug__full__hook_defer.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
Root error
├╴tests/common.rs:147:5
├╴u64
├╴u16
├╴u32
├╴spantrace with 2 frames (1)
╰╴backtrace with [n] frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
  [redacted]


Span Trace No. 1
  [redacted]
