packages/libs/error-stack/tests/snapshots/test_debug__full__hook_fallback.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
├╴tests/common.rs:147:5
├╴unknown
├╴unknown
╰╴unknown
